# yuujinchou

./: CHANGELOG.markdown  CHANGELOG.mkd  CONTRIBUTORS.markdown  CONTRIBUTORS.md  README.markdown  README.mkd  dune  dune-project  index.html  roadmap.mkd  yuujinchou.opam
.github/workflows/: flush-cache.yml  ocaml.yml  odoc.yml
doc/: combinators.mkd
docs/: design.mld  index.mld  rosetta.mld
src/: Action.ml  Action.mli  Language.ml  Language.mli  LanguageSigs.ml  Modifier.ml  Modifier.mli  ModifierSigs.ml  Pattern.ml  Pattern.mli  ResultMonad.ml  Scope.ml  Scope.mli  ScopeDataSigs.ml  ScopeSigs.ml  Selector.ml  Selector.mli  SeqUtils.ml  Trie.ml  Trie.mli  UntaggedTrie.ml  UntaggedTrie.mli  Yuujinchou.ml  Yuujinchou.mli  dune  yuujinchou.mli
src-new/: Action.ml  Action.mli  Bwd.ml  Pattern.ml  Pattern.mli  Trie.ml  Trie.mli  dune
src-old/: Yuujinchou.mli  dune
test/: EasyExample.expected  EasyExample.ml  Example.expected  Example.ml  ListAsTrie.ml  TestAction.ml  TestImportSelect.ml  TestImportSelect.mli  TestModifier.ml  TestTrie.ml  TestTrie.mli  dune  import.ml  select.ml  test.ml
test-new/: TestAction.ml  TestTrie.ml  dune
test-old/: dune  import.ml  select.ml  test.ml
yuujinchou/: design.html  index.html  rosetta.html
yuujinchou/Yuujinchou/: index.html
yuujinchou/Yuujinchou/Language/: index.html
yuujinchou/Yuujinchou/Modifier/: index.html
yuujinchou/Yuujinchou/Modifier/Make/: index.html
yuujinchou/Yuujinchou/Modifier/Make/Perform/: index.html
yuujinchou/Yuujinchou/Modifier/Make/Silence/: index.html
yuujinchou/Yuujinchou/Modifier/Make/argument-1-Param/: index.html
yuujinchou/Yuujinchou/Modifier/Make/module-type-Perform/: index.html
yuujinchou/Yuujinchou/Modifier/module-type-Param/: index.html
yuujinchou/Yuujinchou/Modifier/module-type-Perform/: index.html
yuujinchou/Yuujinchou/Modifier/module-type-Perform/Param/: index.html
yuujinchou/Yuujinchou/Modifier/module-type-S/: index.html
yuujinchou/Yuujinchou/Modifier/module-type-S/Param/: index.html
yuujinchou/Yuujinchou/Modifier/module-type-S/Perform/: index.html
yuujinchou/Yuujinchou/Modifier/module-type-S/Silence/: index.html
yuujinchou/Yuujinchou/Modifier/module-type-S/module-type-Perform/: index.html
yuujinchou/Yuujinchou/Scope/: index.html
yuujinchou/Yuujinchou/Scope/Make/: index.html
yuujinchou/Yuujinchou/Scope/Make/Perform/: index.html
yuujinchou/Yuujinchou/Scope/Make/Silence/: index.html
yuujinchou/Yuujinchou/Scope/Make/argument-1-Param/: index.html
yuujinchou/Yuujinchou/Scope/Make/module-type-Perform/: index.html
yuujinchou/Yuujinchou/Scope/module-type-Param/: index.html
yuujinchou/Yuujinchou/Scope/module-type-Perform/: index.html
yuujinchou/Yuujinchou/Scope/module-type-Perform/Param/: index.html
yuujinchou/Yuujinchou/Scope/module-type-S/: index.html
yuujinchou/Yuujinchou/Scope/module-type-S/Param/: index.html
yuujinchou/Yuujinchou/Scope/module-type-S/Perform/: index.html
yuujinchou/Yuujinchou/Scope/module-type-S/Silence/: index.html
yuujinchou/Yuujinchou/Scope/module-type-S/module-type-Perform/: index.html
yuujinchou/Yuujinchou/Trie/: index.html
yuujinchou/Yuujinchou/Trie/Untagged/: index.html
