opam-version: "2.0"
name: "yuujinchou"
synopsis: "Name modifiers"
description: """
This package implements a domain-specific language for modifying hierarchical names. It intends to facilitate the implementation of the "import" statement.
"""
maintainer: "favonia <favonia@gmail.com>"
authors: "favonia <favonia@gmail.com>"
license: "Apache-2.0"
homepage: "https://github.com/RedPRL/yuujinchou"
bug-reports: "https://github.com/RedPRL/yuujinchou/issues"
dev-repo: "git+https://github.com/RedPRL/yuujinchou.git"
depends: [
  "dune" {>= "2.0"}
  "base-domains"
  "algaeff" {>= "0.1.0"}
  "bwd" {>= "1.0.0"}
  "alcotest" {>= "1.5.0" & with-test}
  "qcheck-core" {>= "0.18" & with-test}
  "odoc" {>= "2.0" & with-doc}
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "build" "-p" name "-j" jobs "@runtest"] {with-test}
  ["dune" "build" "-p" name "-j" jobs "@doc"] {with-doc}
]
