opam-version: "2.0"
name: "yuujinchou"
synopsis: "A domain-specific language for manipulating hierarchical names"
description: """
This package offers a domain-specific language for manipulating hierarchical names. It intends to facilitate the implementation of lexical scoping and import statements.
"""
maintainer: "favonia <favonia@gmail.com>"
authors: [
  "favonia <favonia@gmail.com>"
  "Jon Sterling <jon@jonmsterling.com>"
]
license: "Apache-2.0"
homepage: "https://github.com/RedPRL/yuujinchou"
bug-reports: "https://github.com/RedPRL/yuujinchou/issues"
dev-repo: "git+https://github.com/RedPRL/yuujinchou.git"
depends: [
  "dune" {>= "2.0"}
  "ocaml" {>= "5.0"}
  "algaeff" {>= "0.2"}
  "bwd" {>= "2.1"}
  "alcotest" {>= "1.5" & with-test}
  "qcheck-core" {>= "0.18" & with-test}
  "odoc" {>= "2.0" & with-doc}
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "build" "-p" name "-j" jobs "@runtest"] {with-test}
  ["dune" "build" "-p" name "-j" jobs "@doc"] {with-doc}
]
