(test
 (name test)
 (modules test)
 (preprocess
  (pps ppx_deriving.std))
 (libraries yuujinchou.old))

(test
 (name import)
 (modules import)
 (preprocess
  (pps ppx_deriving.std))
 (libraries yuujinchou.old))

(test
 (name select)
 (modules select)
 (preprocess
  (pps ppx_deriving.std))
 (libraries yuujinchou.old))
