(alias (name default) (deps)) ; prevent @default from building the tests

(test
 (name TestTrie)
 (modules TestTrie)
 (libraries alcotest yuujinchou))

(test
 (name TestAction)
 (modules TestAction)
 (libraries alcotest yuujinchou))

(test
 (name TestImportSelect)
 (modules TestImportSelect)
 (libraries alcotest yuujinchou))
