(rule (copy "../src/Trie.mli" "ListAsTrie.mli"))

(test
 (name TestTrie)
 (modules ListAsTrie TestTrie)
 (libraries qcheck-core qcheck-core.runner yuujinchou))

(test
 (name TestAction)
 (modules TestAction)
 (libraries alcotest yuujinchou))

(test
 (name Example)
 (modules Example)
 (libraries alcotest yuujinchou))
