(rule (copy "../src/Trie.mli" "ListAsTrie.mli"))

(test
 (name TestTrie)
 (modules ListAsTrie TestTrie)
 (libraries qcheck-core qcheck-core.runner yuujinchou))

(test
 (name TestModifier)
 (modules TestModifier)
 (libraries alcotest yuujinchou))

(test
 (name Example)
 (modules Example)
 (libraries yuujinchou))

(test
 (name EasyExample)
 (modules EasyExample)
 (libraries yuujinchou))
